--- a/views/page/header.ejs
+++ b/views/page/header.ejs
@@ -1,15 +1,19 @@
 <header class="header">
     <div class="nav">
-        <p>後台管理</p>
-        <p>前台</p>
+        <a href="/dashboard">
+            <p>後台管理</p>
+        </a>
+        <a href="/" target="_blank">
+            <p>前台</p>
+        </a>
 
     </div>
     <div class="list">
 
         <ul>
             文章管理
-            
-            
+
+
             <div class="item">
                 <a href="/dashboard/post">
                     <li>發表文章</li>
@@ -21,8 +25,8 @@
 
         </ul>
         <ul>
-           帳號管理
-            
+            帳號管理
+
             <div class="item">
 
                 <a href="/dashboard/account">
