--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,66 +8,11 @@
 
     <body>
         <div class="wrapper">
-            <header class="header">
-                <div class="navbar">
-                    <div class="logo">
-                        <img src="/public/image/st2de.png" alt="">
-                    </div>
-                    <div class="bottom">
-                        <span class="colLogo">
-                            <span class="main--text">ST2DE</span>
-                            <span class="sub--text">你好 | 很高興見到你</span>
-                        </span>
-                        <div class="social">
-                            <a href="">
-                                <img src="/public/image/facebook-f.svg" alt="">
-                            </a>
-                            <a href="">
-                                <img src="/public/image/github.svg" alt="">
-                            </a>
-                            <a href="">
-                                <img src="/public/image/st2de.png" alt="">
-                            </a>
-                        </div>
+            <% include header %>
 
-                        <div class="about">
-                            <a href="" class="hover">
-                                <div class="aboutus">
-                                    <span>關於我們</span>
-                                </div>
-                            </a>
-                            <a href="" class="hover">
-                                <div class="aboutus">
-                                    <span>關於我們</span>
-                                </div>
-                            </a>
+                <section class="main">
 
-                        </div>
-
-
-                    </div>
-                </div>
-
-            </header>
-            <section class="main">
-                <div class="post">
-                    <img src="" alt="">
-                    <div class="title"></div>
-                    <div class="date"></div>
-                </div>
-                <div class="post">
-                    <img src="/public/image/st2de.png" alt="">
-                    <div class="text">
-                        <div class="title">
-                            <h3>5/15說明會等待你</h3>
-                        </div>
-                        <div class="date">
-                           <h4>testetsts</h4>
-                        </div>
-                    </div>
-
-                </div>
-            </section>
+                </section>
 
 
         </div>
