--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 
 
     <body>
-        <a class="wrapper">
+        <div class="wrapper">
             <header class="header">
                 <h2>Login</h2>
                 <p class="userName"><%= message %></p>
@@ -19,7 +19,9 @@
                         <input class="input" name="username" placeholder="帳號" />
                         <input class="input" name="password" type="password" placeholder="密碼" />
                         <div class="btns">
-                            <div class="btn login signup">註冊</div>
+                            
+                            <a href="/signup"><div class="btn login signup">刪除
+                            </div></a>
                             <!-- <a href="/signup" class="btn login">刪除 -->
                             <input class="btn login action" type="submit" value="登入">
                         </div>
