--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -22,7 +22,7 @@
                         <input class="input" name="username" placeholder="帳號" />
                         <input class="input" name="password" type="password" placeholder="密碼" />
                         <div class="btns">
-                            <input class="btn login action" type="submit" value="註冊">
+                            <input class="btn login" type="submit" value="註冊">
                         </div>
                     </form>
                 </div>
