--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
                 <div class="form">
                     <form class="inner" id="form" method="POST" action="/task">
                         <input class="input" name="title" placeholder="待辦事項" />
-                        <input class="btn action" type="submit" value="+">
+                        <input class="btn action" type="submit" value="+" id="submit">
                     </form>
                 </div>
 
