--- a/views/page.ejs
+++ b/views/page.ejs
@@ -13,7 +13,7 @@
                 <section class="main page">
                         <div class="context">
                             <div class="image">
-                                <img src="/public/image/image.png" alt="">
+                                <img src="/public/upload/<%- data.upload %>" alt="">
                             </div>
                             <div class="text">
                                 <h2>
@@ -22,9 +22,9 @@
                                 <p>
                                     <%= data.time %>
                                 </p>
-                                <p>
-                                    <%= data.context %>
-                                </p>
+                                
+                                    <%- data.context %>
+                                
                             </div>
                         </div>
 
