--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,10 +11,10 @@
                 <span class="sub--text">你好 | 很高興見到你</span>
             </span>
             <div class="social">
-                <a href="">
+                <a href="https://www.facebook.com/st2de/">
                     <i class="fab fa-facebook-f icon"></i>
                 </a>
-                <a href="">
+                <a href="https://github.com/ST2DE">
                         <i class="fab fa-github icon"></i>
                     </a>
                 <a href="">
